--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,13 @@ on:
     branches: [ "master" ]
 
 permissions:
-  contents: read
+  contents: write
+  pages: write
+  pull-requests: write
+  repository-projects: write
+  deployments: write
+  checks: write
+  actions: write
 
 jobs:
   build:
@@ -19,6 +25,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+        fetch-depth: 0 
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -50,7 +59,11 @@ jobs:
         
         git add index.html
         git commit -m "Automatic Update-1"
-        git push
+    - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
       
         
         
